--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,14 @@
   "name": "neTpyceB/TMCms-module-email-subscribers",
   "type": "library",
   "description": "Module Email Subscribers for TMCms",
-  "keywords": ["cms"],
-  "homepage": "http://petrik.lv/",
+  "keywords": ["cms", "email", "subscribers"],
+  "homepage": "http://devp.lv/",
   "license": "proprietary",
   "authors": [
     {
       "name": "Vadims Petrusevs",
-      "email": "info@petrik.lv",
-      "homepage": "http://petrik.lv/",
+      "email": "info@devp.lv",
+      "homepage": "http://devp.lv/",
       "role": "Developer"
     }
   ],
